# treman

./: .gitignore  Cargo.toml  Dioxus.toml  Integritetspolicy.md  add.go  challenge.go  colors.go  flake.nix  font.go  game.go  go.mod  go.sum  helper.go  index.html  input.css  main.go  pkged.go  readme.md  roll.go  rule.go  screen.go  sprites.go  tailwind.config.js  viewRules.go
.github/workflows/: release.yml
Tools/: android.sh  android_release.sh  android_stream.sh
public/: manifest.json  sw.js  tailwind.css
src/: components.rs  icons.rs  main.rs  rules.rs  scenes.rs
src/components/: fontawesome.rs  heroicons.rs
src/scenes/: challange.rs  create.rs  game.rs  help.rs
wasm-action/: Dockerfile  action.yml  entrypoint.sh
