[package]
name = "treman"
version = "2.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"

tinyrand = "0.5.0"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# Required explicitly to resolve conflict
js-sys = "=0.3.64"
wasm-bindgen = "=0.2.87"
